--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^3.37.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
     "webpack-cli": "^5.1.4"
   }
